# pemdas

./: CMakeLists.txt  README.md
cmake/: FindTaglib.cmake
forms/: albumwidget.ui  pemdas.ui
res/: res.qrc
src/: albumwidget.cpp  albumwidget.hpp  main.cpp  mpd.hpp  musicpage.cpp  musicpage.hpp  pemdas.cpp  pemdas.hpp  player.cpp  player.hpp  playlistpage.cpp  playlistpage.hpp  queue.cpp  queue.hpp  settingspage.cpp  settingspage.hpp  sidebar.cpp  sidebar.hpp  statusbar.cpp  statusbar.hpp  tablistwidget.hpp  toolwidgetlabel.hpp  utils.hpp
src/discord/: discordrpc.cpp  discordrpc.hpp  new 1.txt
